added a lot of work from a few days

--- a/8-19/full-stack-exercise/src/main/webapp/profile.html
+++ b/8-19/full-stack-exercise/src/main/webapp/profile.html
@@ -12,11 +12,8 @@
 	<table class="menu">
 	
 		<tr>
-			<td><form method = "post" action = "add_user"> <input type = "submit" value = "Add User" id="btn"></form></td>
+			<td><form method = "post" action = "list_user"> <input type = "submit" value = "View Users" id="btn"></form></td>
 			
-			<td><form method = "post" action = "delete_user"><input type = "submit" value = "Delete User" id="btn"></form></td>
-			
-			<td><form method = "post" action = "update_user"><input type = "submit" value = "Update User" id="btn"></form></td>
 		</tr>
 		
 	</table>
