--- a/8-19/full-stack-exercise/src/main/webapp/style.html
+++ b/8-19/full-stack-exercise/src/main/webapp/style.html
@@ -86,7 +86,7 @@
 	    margin: 0 auto;
 	}
 	
-	.menu td, th {
+	.menu td, th, tr {
 	    text-align: center;
 	    color: white;
 	    font-size: 24px;
